tests/error/enum_errors/enum_stray_docstring.err
Error: Unexpected statement (at $FILE:7:4)
  | 
5 | class MyEnum:
6 |     v1 = {"x": int}
7 |     """Docstring in wrong position"""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unexpected statement in enum variant definition

Help: enum variant must be of form `VariantName = {"var1": Type1, ...}`

Guppy compilation failed due to 1 previous error
